# streak-tracker

./: .env  .envrc  .gitignore  LICENSE  README.md  flake.nix  justfile  main.py  pyproject.toml  streak.json  streak.txt
.github/workflows/: ran_today.yml
